hphp/hack/test/typecheck/errors/4329-4330-enum_constaint_must_be_arraykey_and_compatible.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

enum Foo : int as bool {
  Y = 1;
}
