hphp/hack/test/typecheck/errors/4329-4330-enum_constaint_must_be_arraykey_and_compatible.php.rust_elab.exp
File "4329-4330-enum_constaint_must_be_arraykey_and_compatible.php", line 4, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "4329-4330-enum_constaint_must_be_arraykey_and_compatible.php", line 4, characters 6-8:
Enums must be `int` or `string` or `arraykey`, not `bool` (Typing[4024])
File "4329-4330-enum_constaint_must_be_arraykey_and_compatible.php", line 4, characters 6-8:
Underlying type for enum is incompatible with constraint (Typing[4330])
  File "4329-4330-enum_constaint_must_be_arraykey_and_compatible.php", line 4, characters 19-22:
  Expected `bool`
  File "4329-4330-enum_constaint_must_be_arraykey_and_compatible.php", line 4, characters 12-14:
  But got `int`
